tests/ui/rust-2024/unsafe-extern-blocks/safe-impl-trait.rs
trait Bar {}
safe impl Bar for () { }
//~^ ERROR expected one of `!` or `::`, found keyword `impl`

fn main() {}
